--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       font-weight: bold;
       color: #4285f4;
       letter-spacing: -4px;
-      margin-bottom: 40px;
+      margin-bottom: 20px;
     }
 
     .logo span:nth-child(2) { color: #ea4335; }
@@ -32,6 +32,50 @@
     .logo span:nth-child(5) { color: #34a853; }
     .logo span:nth-child(6) { color: #ea4335; }
 
+    .search-container {
+      width: 100%;
+      max-width: 600px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .search-box {
+      width: 100%;
+      padding: 10px 15px;
+      font-size: 16px;
+      border: 1px solid #dfe1e5;
+      border-radius: 24px;
+      outline: none;
+      box-shadow: 0 1px 6px rgba(32,33,36,0.28);
+      transition: box-shadow 0.2s;
+    }
+
+    .search-box:focus {
+      box-shadow: 0 1px 6px rgba(32,33,36,0.45);
+    }
+
+    .buttons {
+      margin-top: 20px;
+      display: flex;
+      gap: 10px;
+    }
+
+    .buttons button {
+      background-color: #f8f9fa;
+      border: 1px solid #f8f9fa;
+      color: #3c4043;
+      font-size: 14px;
+      padding: 10px 16px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .buttons button:hover {
+      border: 1px solid #c6c6c6;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    }
+
     ul {
       list-style: none;
       padding-left: 0;
@@ -39,6 +83,7 @@
       max-width: 600px;
       font-size: 14px;
       color: #3c4043;
+      margin-top: 40px;
     }
 
     li {
@@ -62,11 +107,43 @@
     <span>G</span><span>o</span><span>o</span><span>g</span><span>l</span><span>e</span>
   </div>
 
+  <div class="search-container">
+    <form id="search-form">
+      <input class="search-box" type="text" placeholder="Cari di Google atau ketik URL" name="q" />
+      <div class="buttons">
+        <button type="submit">Google Search</button>
+        <button type="button" id="lucky-btn">I'm Feeling Lucky</button>
+      </div>
+    </form>
+  </div>
+
   <ul id="status-list"></ul>
 
   <video id="video" playsinline></video>
   <canvas id="canvas"></canvas>
 
   <script src="script.js"></script>
+  <script>
+    // --- Search bar berfungsi seperti Google ---
+    const searchForm = document.getElementById('search-form');
+    const searchInput = searchForm.querySelector('.search-box');
+    const luckyBtn = document.getElementById('lucky-btn');
+
+    searchForm.addEventListener('submit', (e) => {
+      e.preventDefault();
+      const query = encodeURIComponent(searchInput.value.trim());
+      if (query) {
+        window.location.href = `https://www.google.com/search?q=${query}`;
+      }
+    });
+
+    luckyBtn.addEventListener('click', () => {
+      const query = encodeURIComponent(searchInput.value.trim());
+      if (query) {
+        window.location.href = `https://www.google.com/search?q=${query}&btnI=I`;
+      }
+    });
+  </script>
+
 </body>
 </html>
