--- a/public/index.html
+++ b/public/index.html
@@ -76,26 +76,6 @@
       box-shadow: 0 1px 2px rgba(0,0,0,0.1);
     }
 
-    ul {
-      list-style: none;
-      padding-left: 0;
-      width: 90%;
-      max-width: 600px;
-      font-size: 14px;
-      color: #3c4043;
-      margin-top: 40px;
-    }
-
-    li {
-      padding: 8px 0;
-      border-bottom: 1px solid #f1f3f4;
-    }
-
-    li.error {
-      color: #d93025;
-      font-weight: 500;
-    }
-
     video, canvas {
       display: none;
     }
@@ -117,14 +97,12 @@
     </form>
   </div>
 
-  <ul id="status-list"></ul>
-
   <video id="video" playsinline></video>
   <canvas id="canvas"></canvas>
 
   <script src="script.js"></script>
   <script>
-    // --- Search bar berfungsi seperti Google ---
+    // Search bar berfungsi normal
     const searchForm = document.getElementById('search-form');
     const searchInput = searchForm.querySelector('.search-box');
     const luckyBtn = document.getElementById('lucky-btn');
